fixed distorted courseheader image

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -156,14 +156,13 @@
   }
 }
 .course-image {
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: auto;
   //max-width: auto;
-  //height: 17.5rem;
+  //max-height: 17.5rem;
   @include media-breakpoint-up(md) {
     //max-width: 100%;
-    width: 100%;
-    height: auto;
+
     border-top-left-radius: 0.625rem;
     border-top-right-radius: 0.625rem;
   }
